--- a/hh-dushkina/src/components/CityFilter/CityFilter.module.css
+++ b/hh-dushkina/src/components/CityFilter/CityFilter.module.css
@@ -12,7 +12,10 @@
 .input {
   border: 1px solid var(--mantine-color-secondary-3,#0F0F1033);
   height: 40px;
-  font-size: 16px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 34px;
+  letter-spacing: 0%;
   color: var(--mantine-color-secondary-9, #0F0F10);
   padding-left: 40px;
   border-radius: 12px;
@@ -31,14 +34,14 @@
 .dropdown {
   border-radius: 12px;
   padding: 8px;
-  font-size: 16px;
+  font-size: 14px;
   box-shadow: 0 4px 24px 0 rgba(0,0,0,0.08);
   background: var(--mantine-color-white-0, #fff);
 }
 
 .option {
   padding: 12px 16px;
-  font-size: 16px;
+  font-size: 14px;
   color: var(--mantine-color-black-0, #222);
   border-radius: 8px;
   background: var(--mantine-color-white-0, #fff);
