--- a/hh-dushkina/src/components/Header/Header.module.css
+++ b/hh-dushkina/src/components/Header/Header.module.css
@@ -22,10 +22,14 @@
 }
 
 .brand {
-  font-weight: 700;
-  font-size: 20px;
+  font-weight: 600;
+  font-size: 16px;
   color: var(--mantine-color-secondary-9, #0F0F10);
-  font-family: var(--mantine-font-family, Inter, Arial, sans-serif);
+  font-family: var(--mantine-font-family,"Open-Sans", sans-serif);
+font-weight: 600;
+line-height: 155%;
+letter-spacing: 0%;
+
 }
 
 .center {
@@ -38,20 +42,24 @@
 .navLink {
   display: flex;
   align-items: center;
-  font-size: 20px;
+  font-size: 14px;
   text-decoration: none;
   font-weight: 500;
   color: var(--mantine-color-secondary-9, #0F0F10);
+  line-height: 155%;
+  letter-spacing: 0%;
 }
 
 .navLinkGray {
   display: flex;
   align-items: center;
-  font-size: 20px;
+  font-size: 14px;
   gap: 6px;
   color: var(--mantine-color-secondary-5, #0F0F1080);
   font-weight: 500;
   text-decoration: none;
+  line-height: 155%;
+  letter-spacing: 0%;
 }
 
 .blueDot {
