--- a/hh-dushkina/src/components/VacancyItem/VacancyItem.module.css
+++ b/hh-dushkina/src/components/VacancyItem/VacancyItem.module.css
@@ -3,13 +3,15 @@
   width: 700px;
   border-radius: 12px;
   box-sizing: border-box;
+  line-height: 24px;
+  letter-spacing: 0%;
 }
 
 .title {
-  font-size: 24px;
   font-weight: 600;
   color: var(--mantine-color-primary-7, #4263EB);
   margin-bottom: 0;
+font-size: 20px;
 }
 
 .salaryExp {
@@ -25,6 +27,7 @@
 
 .experience {
   font-size: 14px;
+  font-weight: 400;
   color: var(--mantine-color-secondary-5, #0F0F1080);
 }
 
@@ -40,10 +43,15 @@
 }
 
 .badge {
-  font-size: 10px;
-  font-weight: 800;
+  font-size: 9px;
+  font-weight: 700;
   border-radius: 4px;
   padding: 2px 8px;
+  /* в макете такой указан font */
+  font-family: "Inter"; 
+line-height: 14px;
+text-transform: uppercase;
+
 }
 
 .badgeRemote {
@@ -65,6 +73,7 @@
   font-size: 16px;
   color: var(--mantine-color-secondary-9, #0F0F10);
   margin-top: 4px;
+    font-weight: 400;
 }
 
 .buttons {
@@ -79,24 +88,24 @@
   border-radius: 4px;
   background: var(--mantine-color-secondary-9, #0F0F10);
   color: var(--mantine-color-secondary-0, #fff);
-  font-weight: 500;
-  font-size: 15px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 34px;
   padding: 1px 18px;
   border: none;
   cursor: pointer;
 }
 
 .buttonAlt {
-  width: 130px;
+  width: 140px;
   height: 36px;
   border-radius: 4px;
   background: var(--mantine-color-secondary-2, #0F0F101A);
   color: var(--mantine-color-secondary-9, #0F0F10);
-  font-weight: 500;
-  font-size: 15px;
-
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 34px;
   padding: 1px 18px;
-  
   border: none;
   cursor: pointer;
 }
