--- a/hh-dushkina/src/components/SkillsFilter/SkillsFilter.module.css
+++ b/hh-dushkina/src/components/SkillsFilter/SkillsFilter.module.css
@@ -49,12 +49,12 @@ letter-spacing: 0%;
   justify-content: center;
   padding: 0;
   border-radius: 8px;
-  background: var(--mantine-color-primary-7, #4261EB);
+  background: var(--mantine-color-primary-4, #228BE6);
   color: var(--mantine-color-secondary-0, #fff);
   border: none;
 }
 .addButton:hover{
-  background: var(--mantine-color-primary-8, #364FC7);
+  background: var(--mantine-color-primary-7, #4263EB);
   opacity: 0.8; 
 }
 
